First Layout Draft

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,11 +1,19 @@
 {{ partial "header.html" . }}
 
-<div class="work-padding">
+<div class="work-background"></div>
+
+<div>
     <div class="wrapper">
-        <ul class="work-filter-nav">
+        <!-- <ul class="work-filter-nav">
             <li><a class="logofolio-button filter-button-active">Logofolio</a></li>
             <li><a class="project-button">Projects</a></li>
-        </ul>
+        </ul> -->
+
+        <div class="row end-xs">
+            <div class="col-xs-4">
+                <h1 class="dark">Logos created for various clients of Better Brand Agency.</h1>
+            </div>
+        </div>
 
         <div class="filter-section-logofolio">
             <div class="row">
@@ -14,11 +22,8 @@
                         <div class="work">
                             <img src="/img/logofolio/visualsoft_logo.jpg" alt="work" class="work-img">
                             <img src="/img/logofolio/visualsoft_hover.jpg" alt="work" class="work-img work-hover">
-                            <div class="work-overlay">
-                                <p class="media-title">Visualsoft</p>
-                                <p class="work-agency-date">Agency — Better</p>
-                            </div>
                         </div>
+                        <p class="work-title">Visualsoft</p>
                     </a>
                 </div>
                 <div class="col-sm-4 col-xs-6 work-outer">
@@ -26,11 +31,8 @@
                         <div class="work">
                             <img src="/img/logofolio/kader_logo.jpg" alt="work" class="work-img">
                             <img src="/img/logofolio/kader_hover.jpg" alt="work" class="work-img work-hover">
-                            <div class="work-overlay">
-                                <p class="media-title">Kader Football Club</p>
-                                <p class="work-agency-date">Agency — Better</p>
-                            </div>
                         </div>
+                        <p>Kader Football Club</p>
                     </a>
                 </div>
                 <div class="col-sm-4 col-xs-6 work-outer">
@@ -38,11 +40,8 @@
                         <div class="work">
                             <img src="/img/logofolio/uha_logo.jpg" alt="work" class="work-img">
                             <img src="/img/logofolio/uha_hover_alt_2.jpg" alt="work" class="work-img work-hover">
-                            <div class="work-overlay">
-                                <p class="media-title">University Hospital Association</p>
-                                <p class="work-agency-date">Agency — Better</p>
-                            </div>
                         </div>
+                        <p>University Hospital Association</p>
                     </a>
                 </div>
                 <div class="col-sm-4 col-xs-6 work-outer">
@@ -50,11 +49,8 @@
                         <div class="work">
                             <img src="/img/logofolio/essex_logo.jpg" alt="work" class="work-img">
                             <img src="/img/logofolio/essex_hover.jpg" alt="work" class="work-img work-hover">
-                            <div class="work-overlay">
-                                <p class="media-title">Essex Brewery</p>
-                                <p class="work-agency-date">Agency — Bettery</p>
-                            </div>
                         </div>
+                        <p>Essex Brewery</p>
                     </a>
                 </div>
                 <div class="col-sm-4 col-xs-6 work-outer">
@@ -62,11 +58,8 @@
                         <div class="work">
                             <img src="/img/logofolio/definition_logo.jpg" alt="work" class="work-img">
                             <img src="/img/logofolio/definition_hover.jpg" alt="work" class="work-img work-hover">
-                            <div class="work-overlay">
-                                <p class="media-title">Definition</p>
-                                <p class="work-agency-date">Agency — Better</p>
-                            </div>
                         </div>
+                        <p>Definition</p>
                     </a>
                 </div>
                 <div class="col-sm-4 col-xs-6 work-outer">
@@ -74,11 +67,8 @@
                         <div class="work">
                             <img src="/img/logofolio/highlands_logo.jpg" alt="work" class="work-img">
                             <img src="/img/logofolio/highlands_hover.jpg" alt="work" class="work-img work-hover">
-                            <div class="work-overlay">
-                                <p class="media-title">Highlands Village</p>
-                                <p class="work-agency-date">Agency — Better</p>
-                            </div>
                         </div>
+                        <p>Highlands Village</p>
                     </a>
                 </div>
             </div>
@@ -102,9 +92,9 @@
         </div>
 
         <div class="row end-sm">
-            <div class="col-sm-6">
+            <div class="col-sm-4">
                 <a href="/about" class="large-link large-link-black">
-                    <div class="link-title">Get to know me</div>
+                    <div class="link-title">Profile & Index</div>
                     <div class="dash"></div>
                 </a>
             </div>
