--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -1,49 +1,118 @@
 {{ partial "header.html" . }}
 
-<div class="col-xs-12">
-    <h1>
-        Simplicity by<br>approach
-    </h1>
-</div>
+<div class="about-background"></div>
 
-<div class="wrapper about-page">
+<div class="wrapper">
     <div class="row">
-        <div class="col-xs-12">
-            <img src="{{ $.Site.BaseURL }}img/cities/london.jpg" alt="">
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-12">
-            <h3>
-                I'm Matthew, Logo & Brand Identity Designer with a minimalist approach.
-            <h3>
-        </div>
-    </div>
-    <div class="row center-xs">
         <div class="col-xs-6">
-            <h4>
-                Background
-            </h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.
+            <p class="about-paragraph">
+                I’m Matthew, North East based Graphic Designer specialising in Logo & Brand Identity.
+            </p>
+            <p class="about-paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <p class="about-paragraph">
+                Over the past years, I’ve had experience in brand design, editorial, web design, art direction, photography and naming strategy.
+            </p>
+            <h2>Capabilities</h2>
+            <ul class="capabilities">
+                <li>Creative Direction</li>
+                <li>Logo Design</li>
+                <li>Identity System</li>
+                <li>Brand Guidelines</li>
+                <li>Editorial</li>
+                <li>Digital Design</li>
+                <li>Print</li>
+            </ul>
+            <h2>Work Index</h2>
+            <ul class="work-index">
+                <div class="work-index-item">
+                    <li>Kinnery (2019)</li>
+                    <img src="/img/futra/futra_thumb.jpg" alt="">
+                </div>
+                <div class="work-index-item">
+                    <li>Visualsoft (2019)</li>
+                    <img src="/img/primus/primus_thumb.jpg" alt="">
+                </div>
+                <div class="work-index-item">
+                    <li>Primus Typeface (2019)</li>
+                    <img src="/img/retto/retto_thumb.jpg" alt="">
+                </div>
+                <div class="work-index-item">
+                    <li>Kader Football Club (2019)</li>
+                    <img src="/img/retto/retto_thumb.jpg" alt="">
+                </div>
+                <div class="work-index-item">
+                    <li>Realtime UK (2019)</li>
+                    <img src="/img/retto/retto_thumb.jpg" alt="">
+                </div>
+                <div class="work-index-item">
+                    <li>Definition Agency (2019)</li>
+                    <img src="/img/retto/retto_thumb.jpg" alt="">
+                </div>
+                <div class="work-index-item">
+                    <li>Digital Skills Academy (2019)</li>
+                    <img src="/img/retto/retto_thumb.jpg" alt="">
+                </div>
+                <div class="work-index-item">
+                    <li>Notorious Clothing (2018)</li>
+                    <img src="/img/retto/retto_thumb.jpg" alt="">
+                </div>
+                <div class="work-index-item">
+                    <li>University Hospital Association (2018)</li>
+                    <img src="/img/retto/retto_thumb.jpg" alt="">
+                </div>
+                <div class="work-index-item">
+                    <li>Essex Brewery (2018)</li>
+                    <img src="/img/retto/retto_thumb.jpg" alt="">
+                </div>
+                <div class="work-index-item">
+                    <li>Highlands Village (2018)</li>
+                    <img src="/img/retto/retto_thumb.jpg" alt="">
+                </div>
+                <div class="work-index-item">
+                    <li>Course Box (2017)</li>
+                    <img src="/img/retto/retto_thumb.jpg" alt="">
+                </div>
+                <div class="work-index-item">
+                    <li>Cities Clothing (2017)</li>
+                    <img src="/img/retto/retto_thumb.jpg" alt="">
+                </div>
+                <div class="work-index-item">
+                    <li>The Parmo House (2017)</li>
+                    <img src="/img/retto/retto_thumb.jpg" alt="">
+                </div>
+                <div class="work-index-item">
+                    <li>CCAD Summer Show (2017)</li>
+                    <img src="/img/retto/retto_thumb.jpg" alt="">
+                </div>
+                <div class="work-index-item">
+                    <li>Tame Impala Vinyl (2017)</li>
+                    <img src="/img/retto/retto_thumb.jpg" alt="">
+                </div>
+                <div class="work-index-item">
+                    <li>Mykri Packaging (2016)</li>
+                    <img src="/img/retto/retto_thumb.jpg" alt="">
+                </div>
+            </ul>
+        </div>
+        <div class="col-xs-offset-2 col-xs-4">
+            <img src="/img/profile.png" alt="" class="profile-pic">
+
+            <p class="about-paragraph contact-sticky">
+                Starting a project? Get in touch via Email and keep updated with future projects on Instagram.
             </p>
         </div>
     </div>
-    <div class="row center-xs">
-        <div class="col-xs-6">
-            <h4>
-                Approach
-            </h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.
-            </p>
+
+    <!-- <div class="row end-sm">
+        <div class="col-sm-4">
+            <a href="/work" class="large-link large-link-black">
+                <div class="link-title">View work</div>
+                <div class="dash"></div>
+            </a>
         </div>
-    </div>
-    <h2 class="large-center-link">
-        Starting a project?
-        <br>
-        <a href="/contact" class="standard-link">Get in touch</a>
-    </h2>
+    </div> -->
 </div>
 
 {{ partial "footer.html" . }}
