--- a/layouts/partials/footer-light.html
+++ b/layouts/partials/footer-light.html
@@ -1,4 +1,4 @@
-    <footer>
+    <footer class="white-footer">
         <div class="wrapper">
             <div class="row">
                 <div class="col-xs-8">
