Initial Image Optimisation

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -34,7 +34,7 @@
         </div>
 
         <div class="row end-sm">
-            <div class="col-sm-4">
+            <div class="col-xs-12 col-sm-4">
                 <a href="/about" class="large-link">
                     <div class="link-title">Profile & Index</div>
                     <div class="dash"></div>
