--- a/static/css/main.css
+++ b/static/css/main.css
@@ -536,4 +536,9 @@ p.project-intro-extra {
     .project-title {
         margin-bottom: 40px;
     }
+
+    .work-index-item img {
+        visibility: hidden;
+        display: none;
+    }
 }
